# Trunkit

./: .dockerignore  .gitattributes  .gitignore  AUDIT.md  Dockerfile  LICENSE  METHODS.md  Makefile  README.md  SECURITY.md  SKILL.md  STATUS.md  STATUS_BOARD.html  TRUNKIT_CAPABILITY_FOOTPRINT.md  Trunkit_Erdos_AI_Capability_Fit.md  Trunkit_arXiv_Expansion_Review.md  docker-compose.yml  pyproject.toml
.curry/: config.json
.github/workflows/: python-package-conda.yml
arith-check/: arith_check.py
attestations/: tel_cleanup_attestation.sql  tel_federation_validation_attestation.sql
benchmarks/: _notify_demo.py  bench.py  bench_chomsky.py  llm_eval.py  sequence_bench.py
csp-carry/: csp_carry.py
docs/: CERT_SQL_GENERATION_GUARDRAILS.md  CROSS_LAB_SHARED_SCHEMA.md  DEMO_CORPUS.md  LEAN_BRIDGE_SPEC.md  NEXT_EXPANSIONS.md  NEXT_SESSION.md  PORTER_POLICY_GATE.md  QUANT_EHA_WFFA_DESIGN.md  RELEASE_0_4_0_ARXIV_SCAN.md  TOOL_IN_TOOL_EHA_WFFA.md  TOOL_ON_TOOL_TOPOLOGY.md  TRUNKIT_SELF_ANALYSIS_2026-07-17.md  VISION_ARXIV_SCAN.md  VISION_LAYER.md
docs/methods/: arith_check_spec.md  csp_carry_spec.md  parity_results.md  quote_carry_spec.md
docs/reports/: AUDIT.md
local/: README.md  STATUS_BOARD.html  bundles_oeis_lean_2026-07-09.json  morning_brief_demo.py
local/attestations/: tel_federation_registry.sql
local/docs/: AUDIT_WORKSHEET.md  STATUS_BOARD.html
local/sql/: 22_curry_calx_functor_seed.sql  32_kan_sequence_terms.sql  33_kan_sequence_terms_bridge.sql  51_curry_lib_claims.sql  81_cert_kan_engines.sql  82_cert_curry_calx_invariant.sql  83_cert_tier1_proofs.sql  84_cert_outrun_detector.sql  85_cert_diffeology.sql  86_cert_kan_self_report.sql  87_cert_lattice_gauge.sql  88_cert_hyperdual.sql  89_cert_yang_mills.sql  90_cert_equip_probes.sql  92_strat.sql  93_cert_observability.sql  94_cert_kernel.sql  95_cert_ledger.sql  96_cert_probe_sandbox.sql
local/tests/: kernel_vectors.py  test_cert_kernel.py
local/tools/: build_colimit_closure.py  build_f1_radix.py  build_lithon.py  build_scott.py  develop_omega_family.py  diagnostic_tests.py  gen_board.py  (+23 more)
proofs/: bigrading.py  chromatic.py  colimit_closure.py  combined_scale.py  combined_signature.py  developed_sequence.py  equipment.py  f1_radix.py  factorial_homology_signature.py  gap_homology_primes.py  grading.py  identity_decomposition.py  lithon.py  moonshine.py  omega_family.py  omega_family_succ.py  perfect_28.py  prime_members_functor.py  self_shadow.py  self_syzygy.py  seq_homology_signature.py  shadow.py  shared_prime_h2.py  strata_tower.py
puzzle-parity/: parity_puzzle.py
quote-carry/: quote_carry.py
scripts/: AxiomAudit.lean  lean_check.sh  morning_brief_demo.py
sql/: 02_views.sql  04_crt.sql  23_kan_monoidal.sql  26_kan_enrichment.sql  47_kan_combined_signature.sql  49_kan_shared_prime_betti.sql  56_cert_prime_members_functor.sql  57_kan_strata_tower.sql  58_cert_strata_tower.sql  59_kan_grading.sql  61_kan_identity_decomposition.sql  62_cert_identity_decomposition.sql  74_cert_self_shadow.sql  75_kan_f1_radix.sql  77_kan_moonshine.sql  82_kan_equipment.sql  87_cert_export_bundle.sql
src/calx/: __init__.py  arith.py  bundle.py  cli.py  curry_adapter.py  db.py  generate.py  holographic.py  imagefeatures.py  kernel.py  leanbridge.py  ledger.py  morphism.py  primesieve.py  pyproject.toml  quickstart.py  recurrence.py  validate.py
src/calx/methods/: __init__.py  arith_check.py  csp_carry.py  parity_puzzle.py  quote_carry.py
src/calx/sql/: 00_rehome_to_calx.sql  01_schema.sql  03_generate.sql  05_dynamics.sql  06_oeis_match.sql  07_compositions.sql  100_cert_lifecycle.sql  10_curry.sql  20_kan.sql  21_kan_functors.sql  22_kan_elements.sql  24_kan_natural_transformations.sql  25_kan_extensions.sql  27_kan_profunctors.sql  28_kan_adjunctions.sql  30_kan_corpus.sql  31_kan_corpus_seed.sql  40_cert.sql  41_cert_formal.sql  41a_cert_formal_lean.sql  42_cert_gap_homology.sql  43_kan_sequence_homology.sql  44_cert_seq_homology.sql  45_kan_factorial_homology.sql  46_cert_factorial_homology.sql  48_cert_combined.sql  50_cert_combined_scale.sql  50_curry_lib.sql  51_cert_shared_prime_h2.sql  52_cert_developed_sequence.sql  53_cert_omega_family.sql  54_cert_omega_family_succ.sql  55_kan_prime_members.sql  57_kan_strata_tower.sql  60_cert_grading.sql  63_kan_bigrading.sql  64_cert_bigrading.sql  65_kan_chromatic.sql  66_cert_chromatic.sql  67_kan_lithon.sql  (+33 more)
src/calx/sql/examples/: crt_examples.sql  queries.sql
tests/: conftest.py  dbskip.py  kernel_vectors.py  test_aliquot.py  test_build.py  test_bundle_verify.py  test_categorical.py  test_cert_crypto.py  test_cert_formal_lean.py  test_cert_image.py  test_cert_ledger.py  test_cert_lifecycle.py  test_chomsky.py  test_close_resolution.py  test_compose_match.py  test_composite_dfa.py  test_crt.py  test_cybernetic.py  test_dead_time_factory.py  test_dynamics.py  test_equivalent.py  test_exactness.py  test_factorizations.py  test_holographic.py  test_imagefeatures.py  test_imagefeatures_fourier.py  test_kernel_parity.py  test_leanbridge.py  test_mcp_cert_tools.py  test_methods.py  test_minimize.py  test_morphism.py  test_morphisms.py  test_oeis_cosine.py  test_oeis_match.py  test_packaging_surface.py  test_phase1a.py  test_phase1b.py  test_phase1c.py  test_phase2.py  (+13 more)
tools/: AxiomAudit.lean  agent_demo.py  build_bigrading.py  build_chromatic.py  build_equipment.py  build_grading.py  build_identity_decomposition.py  build_lithon.py  build_moonshine.py  build_self_shadow.py  build_self_syzygy.py  build_shadow.py  build_strata_tower.py  cert_crypto.py  cert_formal.py  cert_kernel.py  compose_match.py  cryptanalysis.py  develop_sequence.py  erdos_straus.py  factorial_homology.py  figure_extract.py  fraction_families.py  gen_status.py  general_fraction_families.py  image_features.py  kan_in_kan.py  lean_check.sh  load_kan_corpus.py  oeis_loader.py  oeis_match.py  prime_members_functor.py  register_calx_in_curry.py  relationship_report.py  run_compose_discovery.py  run_discovery.py  seed_oeis_classics.py  seq_homology.py  sitecustomize.py  smoke_curry_calx.py  (+8 more)
(+49 files in other folders)
