[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trunkit"
version = "0.2.7"
authors = [
  { name = "Athena Kaminsky", email = "thegiantsnail@gmail.com" },
]
description = "Trunkit — proof-carrying code and deterministic automata middleware on PostgreSQL, with Porter agent context handoff"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
  "postgresql", "proof-carrying-code", "formal-verification",
  "automata", "dfa", "minimization", "nerode-equivalence",
  "category-theory", "integer-sequences", "agent", "handoff", "llm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: SQL",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Database",
]
dependencies = [
  "psycopg>=3.2,<4",
]

[project.urls]
Homepage = "https://github.com/Athena-Pro/Trunkit"
Repository = "https://github.com/Athena-Pro/Trunkit"

[project.optional-dependencies]
binary = [
  "psycopg[binary]>=3.2,<4",
]
# Vision layer: only the out-of-package tool tools/image_features.py needs an
# image decoder. The calx core (descriptors math, cosine, registry) stays
# psycopg-only; install this extra only to compute descriptors from real images.
image = [
  "pillow>=10",
]
dev = [
  "psycopg[binary]>=3.2,<4",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "build>=1.0",
  "twine>=5.0",
]

[project.scripts]
trunkit = "calx.cli:main"
nerode  = "nerode.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/calx", "src/nerode"]

[tool.hatch.build.targets.wheel.shared-data]
"tools" = "share/trunkit/tools"
"proofs" = "share/trunkit/proofs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["error"]
markers = [
    "network: tests that make real HTTP requests (deselect with -m 'not network')",
    "slow: requires non-trivial generate limit",
    "primesieve: requires primesieve CLI on PATH",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
